SF-663 Fix answer tab overflow (#431)

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
@@ -26,7 +26,9 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 100%;
+    flex-grow: 1;
+    // setting min width prevents the element from overflowing the flex parent
+    min-width: 0;
     .chapter-select {
       cursor: pointer;
     }
